// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingHero > Snapshots > matches snapshot for signed in user 1`] = `
<div>
  <div
    class="text-white font-bold py-36 text-center space-y-5"
  >
    <div
      class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl space-y-5 font-extrabold"
    >
      <h1>
        The Best AI Tool for 
      </h1>
      <div
        class="text-transparent bg-clip-text bg-gradient-to-r 
                from-purple-400 to-pink-600"
      >
        <div
          data-options="{"strings":["Chatbot.","Photo Generation.","Music Generation.","Code Generation.","Video Generation."],"autoStart":true,"loop":true}"
          data-testid="typewriter"
        >
          Typewriter Effect
        </div>
      </div>
    </div>
    <div
      class="text-sm md:text-xl font-light text-zinc-400"
    >
      Create content using AI 10x faster.
    </div>
    <div>
      <a
        data-testid="link"
        href="/dashboard"
      >
        <button
          class="md:text-lg p-4 md:p-6 rounded-full font-semibold"
          data-testid="cta-button"
          data-variant="premium"
        >
          Start Generating For Free
        </button>
      </a>
    </div>
    <div
      class="text-zinc-400 text-xs md:text-sm font-normal"
    >
      No credit card required.
    </div>
  </div>
</div>
`;

exports[`LandingHero > Snapshots > matches snapshot for signed out user 1`] = `
<div>
  <div
    class="text-white font-bold py-36 text-center space-y-5"
  >
    <div
      class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl space-y-5 font-extrabold"
    >
      <h1>
        The Best AI Tool for 
      </h1>
      <div
        class="text-transparent bg-clip-text bg-gradient-to-r 
                from-purple-400 to-pink-600"
      >
        <div
          data-options="{"strings":["Chatbot.","Photo Generation.","Music Generation.","Code Generation.","Video Generation."],"autoStart":true,"loop":true}"
          data-testid="typewriter"
        >
          Typewriter Effect
        </div>
      </div>
    </div>
    <div
      class="text-sm md:text-xl font-light text-zinc-400"
    >
      Create content using AI 10x faster.
    </div>
    <div>
      <a
        data-testid="link"
        href="/sign-up"
      >
        <button
          class="md:text-lg p-4 md:p-6 rounded-full font-semibold"
          data-testid="cta-button"
          data-variant="premium"
        >
          Start Generating For Free
        </button>
      </a>
    </div>
    <div
      class="text-zinc-400 text-xs md:text-sm font-normal"
    >
      No credit card required.
    </div>
  </div>
</div>
`;
